@@ -1,10 +1,17 @@
 2010-04-29  Doug Hellmann  <dhellmann@racemi.com>
 
+	* tests/test_workon.sh: Refactor deactivate tests into their own
+	script.
+
+	* tests/test_deactivate.sh: Refactor deactivate tests into their
+	own script.
+
 	* virtualenvwrapper.sh (virtualenvwrapper_get_python_version): Add
 	a comment about why we're using the $PATH python instead of the
 	one where the wrappers are installed.
 	(add2virtualenv): Use the install-tree python instead of the one
 	from $PATH.
+	(deactivate): Ignore errors from redundant unset calls.
 
 2010-04-26  Doug Hellmann  <dhellmann@racemi.com>
 
